bk_ida/gccida/g1/sge_plus_constant
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/loop.c:7297:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), x, c); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/loop.c:7298:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/loop.c:7302:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx, v6); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/loop.c:7309:33: error: expected expression
v7 = sge_plus_constant( *( rtx *)&x[1], c); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/loop.c:7310:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v7, rtx); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/loop.c:7315:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v4, v2); 
                               ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/sge_plus_constant/src/obj/loop.o] Error 1
